# certified-block-screening

./: .gitignore  README.md  pyproject.toml  tb
.github/workflows/: paper.yml
configs/attention/: attn_block64_topk16_residual_gather_shared.yaml  attn_block64_topk4.yaml  attn_block64_topk4_gather.yaml  attn_block64_topk4_residual_gather_shared.yaml  attn_block64_topk8_residual.yaml  attn_block64_topk8_residual_gather.yaml  attn_block64_topk8_residual_gather_shared.yaml  attn_bound_mp2_topk6.yaml  attn_bound_mp4_topk6.yaml  attn_bound_mp8_topk6.yaml  attn_bound_screen_b16_topk24_coarse.yaml  attn_bound_screen_b16_topk24_windowed_max.yaml  attn_bound_screen_b32_topk12_windowed_max.yaml  attn_bound_screen_b8_topk48_windowed_max.yaml  attn_bound_screen_topk4_residual.yaml  attn_bound_screen_topk5_residual.yaml  attn_bound_screen_topk6_residual.yaml  attn_bound_screen_topk6_windowed_max.yaml  attn_bound_screen_topk6_windowed_max_delta5.yaml  attn_bound_screen_topk6_windowed_mean.yaml  (+5 more)
docs/: failure_log.md
paper/: main.tex  outline.md  paper.md  references.bib
scripts/: bench_matrix.py  make_paper_artifacts.py  measure_bound_tightness.py  profile_baseline.py  run_eval.py  run_passkey_matrix.py
tests/: test_attention_bound_cache.py  test_attention_bound_screen.py  test_attention_equivalence.py  test_attention_gather_equivalence.py  test_attention_gather_shared.py  test_attention_gather_windowed.py  test_attention_multiproto.py  test_attention_selector.py  test_attention_summaries.py  test_config.py  test_ffn_factorization.py  test_ffn_patch_equivalence.py
(+72 files in other folders)
